<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:background="@color/primary_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberOne"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberTwo"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberThree"></Button>

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="/"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberFour"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/numberFive"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberSix"></Button>

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="*"></Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberSeven"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberEight"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/numberNine"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="+"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="."></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="0"></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="="></Button>

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="-"></Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>